<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Live Well BD Premium</string>
</resources>