<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2021 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="core_ui_doctors_online">Doctors Online</string>">
    <string name="core_ui_taka_sign">৳</string>">
    <string name="core_ui_our_services">Our Services</string>">

    <string name="core_ui_doctor_on_demand">Doctors on Demand</string>">

    <string name="core_ui_card_consult_a_doctor">Consult a doctor for\nonly</string>">
    <string name="core_ui_card_instantly_consult_a">Instantly consult a</string>">
    <string name="core_ui_card_call_now">Call Now</string>">


</resources>
